# vsl_detect

./: .gitignore  CheckData.py  Combine.py  CreateData.py  Download.py  Extract.py  LICENSE  Main.py  README.md  Training.py  quick_start.py  requirements.txt  run.py
.github/workflows/: main.yaml
Logs/: action_mapping.json  data_collection_log.json  progress_state.json
apps/: .gitkeep  CreateData.py  Training.py
configs/: config.yaml
dev/: .gitkeep  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  setup.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: augment_data.py  setup.py
src/vsl_detect/: __init__.py  main.py
src/vsl_detect/core/: __init__.py  detector.py
src/vsl_detect/ui/: __init__.py  main_window.py
src/vsl_detect/ui/widgets/: __init__.py  camera_widget.py  control_widget.py  text_widget.py
src/vsl_detect/utils/: __init__.py  audio.py  config.py  logger.py
tests/: test_config.py  test_detector.py
tools/: .gitkeep  clean_root_directory.py  reorganize_project.py
